# zenith-compiler

./: .gitignore  .npmignore  CHANGELOG.md  README.md  RELEASE_NOTES.md  build_output.txt  package-lock.json  package.json  phase10-performance.bench.ts  tsconfig.json
native/compiler-native/: Cargo.toml  check_err.txt  check_output.txt  index.d.ts  index.js  package-lock.json  package.json
native/compiler-native/examples/: repro.rs
native/compiler-native/src/: cache.rs  codegen.rs  codegen_test_repro.rs  component.rs  component_tests.rs  debug_static_eval.rs  discovery.rs  document.rs  expression_tests.rs  finalize.rs  head_validator.rs  hydration_runtime.js  jsx_lowerer.rs  layout.rs  lib.rs  lowering_tests.rs  parse.rs  parse_tests.rs  renamer.rs  safety_tests.rs  sanity_check_phase_0.rs  scope.rs  static_eval.rs  transform.rs  validate.rs  visitor.rs
scripts/: ci-guard.sh  release.ts
src/: build-analyzer.ts  bundler.ts  index.ts  parseZenFile.ts  spa-build.ts  ssg-build.ts
src/core/: index.ts
src/core/plugins/: registry.ts
src/discovery/: componentDiscovery.ts  layouts.ts
src/errors/: compilerError.ts
src/finalize/: finalizeOutput.ts  generateFinalBundle.ts
src/ir/: types.ts
src/output/: types.ts
src/runtime/: analyzeAndEmit.ts  build.ts  bundle-generator.ts  client-runtime.ts  wrapExpression.ts
src/test/: analyze-emit.test.ts  bundler-contract.test.ts  compiler-authority.test.ts  compiler-entry.test.ts  component-instance-test.ts  error-native-bridge.test.ts  error-serialization.test.ts  macro-inlining.test.ts  phase5-boundary.test.ts
src/transform/: classifyExpression.ts  componentResolver.ts  layoutProcessor.ts  transformTemplate.ts
src/validate/: invariants.ts
