[package]
name = "compiler-native"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["napi"]
napi = ["dep:napi", "dep:napi-derive"]

[dependencies]
napi = { version = "2.16.0", features = ["async", "serde-json"], optional = true }
napi-derive = { version = "2.16.0", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
lazy_static = "1.4"
oxc_parser = "0.110.0"
oxc_allocator = "0.110.0"
oxc_span = "0.110.0"
oxc_ast = "0.110.0"
oxc_ast_visit = "0.110.0"
oxc_codegen = "0.110.0"
oxc_syntax = "0.110.0"
oxc_transformer = "0.110.0"
oxc_semantic = "0.110.0"

# HTML5 parsing for template parser
html5ever = "0.27.0"
markup5ever_rcdom = "0.3.0"
tendril = "0.4"

# Directory traversal for discovery
walkdir = "2.5"

# Performance & Incremental Compilation
sha2 = "0.10"
rayon = "1.10"

[build-dependencies]
napi-build = "2.1.0"
